--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Рецепты Одина</h1>
     <a href="./hinkali.html">Хинкали</a>
+    <a href="./urbech.html">Урбеч</a>
 </body>
 </html>
