--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Рецепты Одина</h1>
     <a href="./hinkali.html">Хинкали</a>
     <a href="./urbech.html">Урбеч</a>
+    <a href="./cesar.html">Цезарь (салат)</a>
 </body>
 </html>
