--- a/urbech.html
+++ b/urbech.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Урбеч</h1> 
-    <img src="./images/urbech.webp" alt="урбеч">  
+    <img src="./images/urbech.jpg" alt="урбеч">  
     <h2>Описание</h2>
     <p>Урбеч — это натуральная паста из сырых орехов или 
         семян, перетертых до состояния густой массы</p>
